--- a/styles/form.css
+++ b/styles/form.css
@@ -1,1 +1,44 @@
 @import url(fields/index.css);
+
+form {
+
+    
+    & label {
+        display: block;
+    }
+}
+
+main {
+
+    & .scroll {
+        padding: 32px 40px;
+    }
+}
+
+main.scroll > form {
+  max-width: 560px;
+  width: 100%;
+  margin: 0 auto;   
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+section {
+  max-width: 560px;        
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+fieldset {
+    border: none;
+    gap: 1rem;
+    
+    display: grid;
+
+}
+
+fieldset + fieldset {
+    margin-top: 3rem;
+}
