--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,33 @@ body {
     gap: 12px;
 }
 
+.row-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.field input,
+ textarea, 
+ .control {
+  width: 100%;
+}
+
+
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+
+.margin-bottom-24 {
+    margin-bottom: 24px;
+}
+
 :root {
 
     /*  Brand  */
