--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,8 +1,6 @@
 input {
     box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: block;
 
     width: 365px;
     height: 48px;
@@ -21,8 +19,14 @@ input {
 
 input::placeholder {
         font: var(--body-md);
+        color: var(--input-placeholder);
         display: flex;
     }
+
+input[type="datetime-local"]::-webkit-datetime-edit {
+    font: var(--body-md);
+    color: var(--input-placeholder);
+}
 
 input:focus {
     border: 1px solid var(--brand-light);
@@ -66,6 +70,7 @@ input:focus {
         color: var(--text-body);
 }
 
+
     & input[type="radio"] {
         display: none;
   
@@ -90,3 +95,22 @@ input:focus {
   }
 
 }
+
+input[type="datetime-local"] {
+  padding-right: 32px;     
+  position: relative;
+}
+
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  opacity: 0;               
+  display: block;               
+  cursor: pointer;
+
+}
+
+input[type="date"],
+input[type="datetime-local"],
+input[type="time"] {
+    -moz-appearance: textfield;
+}
+
