--- a/styles/layout.css
+++ b/styles/layout.css
@@ -65,3 +65,11 @@ main {
   width: 0;               
   background: transparent;
 }
+
+fieldset {
+
+    & h3 {
+        font: var(--body-sm);
+        color: var(--text-heading);
+    }
+}
