--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -17,6 +17,8 @@ input {
 
 }
 
+/* Segmented Control */
+
 input::placeholder {
         font: var(--body-md);
         color: var(--input-placeholder);
@@ -96,6 +98,8 @@ input:focus {
 
 }
 
+/* Calendar icon */
+
 input[type="datetime-local"] {
   padding-right: 32px;     
   position: relative;
@@ -113,6 +117,8 @@ input[type="datetime-local"],
 input[type="time"] {
     -moz-appearance: textfield;
 }
+
+/* Textarea */
 
 textarea {
     box-sizing: border-box;
@@ -136,3 +142,70 @@ textarea {
         color: var(--input-placeholder);
     }
 }
+
+/* Color Selection */
+
+.color-selection {
+  position: relative;
+
+  & h3 {
+    font: var(--body-sm);
+    color: var(--text-heading);
+    margin-bottom: 16px;
+  }
+
+  & > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;  
+    gap: 8px;                      
+    padding: 0;
+  }
+
+
+  & input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    margin: 0;
+    inline-size: 1px;
+    block-size: 1px;
+  }
+
+
+  & label {
+    inline-size: 40px;
+    block-size: 40px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background: var(--shape-background); 
+    border: 5px solid var(--shape-button); 
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    transition: transform .12s ease;
+  }
+
+  & input[type="radio"]:checked + label {
+    outline-offset: 2px;
+  }
+  & input[type="radio"]:focus + label {
+    box-shadow: 0 0 0 2px var(--brand-light);
+  }
+  & label:hover { 
+    transform: scale(1.03);
+    border: 5px solid var(--shape-hover);
+  
+  }
+
+
+  & #c1 + label { background: var(--purple); }
+  & #c2 + label { background: var(--fuschia); }
+  & #c3 + label { background: var(--pink); }
+  & #c4 + label { background: var(--orange); }
+  & #c5 + label { background: var(--yellow); }
+  & #c6 + label { background: var(--lime); }
+  & #c7 + label { background: var(--green); }
+  & #c8 + label { background: var(--cyan); }
+  & #c9 + label { background: var(--navy); }
+} 
